--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -72,9 +72,10 @@ a {
     margin-left: 20px;
 }
 
-.search-engine-optimization,
-.online-reputation-management,
-.social-media-marketing {
+/* Selector List*/
+#search-engine-optimization,
+#online-reputation-management,
+#social-media-marketing {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
@@ -83,15 +84,15 @@ a {
     color: #ffffff;
 }
 
-.search-engine-optimization img,
-.online-reputation-management img,
-.social-media-marketing img {
+#search-engine-optimization img,
+#online-reputation-management img,
+#social-media-marketing img {
     max-height: 200px;
 }
 
-.search-engine-optimization h2,
-.online-reputation-management h2,
-.social-media-marketing h2 {
+#search-engine-optimization h2,
+#online-reputation-management h2,
+#social-media-marketing h2 {
     margin-bottom: 20px;
     font-size: 36px;
 }
