--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,7 +31,7 @@ header h1 .seo {
 }
 
 /* Generic container for flow content*/
-header div {
+header nav {
     padding-top: 15px;
     margin-right: 20px;
     float: right;
@@ -40,11 +40,11 @@ header div {
 }
 
 /* attributes no style to the unoredered list*/
-header div ul {
+header nav ul {
     list-style-type: none;
 }
 /* display the list item in a line with a margin to the left*/
-header div ul li {
+header nav ul li {
     display: inline-block;
     margin-left: 25px;
 }
